--- a/iframe.html
+++ b/iframe.html
@@ -18,7 +18,7 @@ strokeStyle = "#eee", // لون الخط الرمادي
 fontFamily = "cairo", // اسم الخط
 fontColor =  '#FFFFFF'; // للون الخط
 !function(){var e=document.createElement("script")
-e.type="text/javascript",e.async=!0,e.src="https://cdn.jsdelivr.net/gh/abdelalilebbihi/abdou_tech/gadget/redirect-page.js"
+e.type="text/javascript",e.async=!0,e.src="https://adsfreepro.github.io/home/js/redirect-page.js"
 var t=document.getElementsByTagName("script")[0]
 t.parentNode.insertBefore(e,t)}();
 </script>
