--- a/iframe.html
+++ b/iframe.html
@@ -22,3 +22,26 @@ e.type="text/javascript",e.async=!0,e.src="https://adsfreepro.github.io/home/js/
 var t=document.getElementsByTagName("script")[0]
 t.parentNode.insertBefore(e,t)}();
 </script>
+
+
+
+<script language="JavaScript">
+<!--
+//Disable right click script III- By heb3ta (www.heb3ta.com) //Disable select-text script (IE4+, NS6+)- By https://www.heb3ta.com/ 
+var message=""; 
+function clickIE() {
+if (document.all) {
+(message);return false;
+}
+} function clickNS(e) { 
+if (document.layers||(document.getElementById&&!document.all)) { 
+if (e.which==2||e.which==3) { (message); return false;
+} } } if (document.layers) { document.captureEvents(Event.MOUSEDOWN); 
+document.onmousedown=clickNS;
+} else { document.onmouseup=clickNS;
+document.oncontextmenu=clickIE; 
+} document.oncontextmenu=new Function("return false")
+function disableselect(e) { return false } function reEnable() { return true } 
+document.onselectstart=new Function ("return false") //if NS6 if (window.sidebar){ document.onmousedown=disableselect document.onclick=reEnable } //
+//-->
+</script>
