--- a/iframe.html
+++ b/iframe.html
@@ -24,6 +24,14 @@ t.parentNode.insertBefore(e,t)}();
 </script>
 
 
+<!-- Bootstrap core CSS -->
+<link href="https://adsfreepro.github.io/home/css/bootstrap.min.css" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="https://adsfreepro.github.io/home/css/styles.css" rel="stylesheet">
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<script src="https://adsfreepro.github.io/home/js/jquery.min.js "></script>
+<script src="https://adsfreepro.github.io/home/js/bootstrap.min.js"></script>
 
 <script language="JavaScript">
 <!--
