--- a/iframe.html
+++ b/iframe.html
@@ -23,7 +23,9 @@ var t=document.getElementsByTagName("script")[0]
 t.parentNode.insertBefore(e,t)}();
 </script>
 
-
+<style type="text/css">
+body{background:#DDDDDD;height:250px;padding:10%;}
+</style>
 <!-- Bootstrap core CSS -->
 <link href="https://adsfreepro.github.io/home/css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom styles for this template -->
